--- a/BioadresarAndroid/res/values/ids.xml
+++ b/BioadresarAndroid/res/values/ids.xml
@@ -4,6 +4,7 @@
     <item name="locationLabel" type="id"/>
     <item name="homeLink" type="id"/>
     <item name="buttonTag" type="id"/>
+    <item name="listContentTag" type="id"/>
     <item name="fragmentContainer" type="id"/>
 
 </resources>
