--- a/BioadresarAndroid/res/layout/edit_details.xml
+++ b/BioadresarAndroid/res/layout/edit_details.xml
@@ -108,31 +108,39 @@
 
                         <TextView
                             android:id="@+id/textView2"
-                            android:layout_width="140dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top|left"
                             android:text="@string/customDistribution"
                             android:textAppearance="@style/HnutiDuha.HeaderMediumWhite" />
 
-                        <TextView
-                            android:id="@+id/customDeliveryYes"
-                            style="@style/HnutiDuha.ItemButtonMedium"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="right"
-                            android:layout_marginRight="10dp"
-                            android:background="@drawable/btn_checkbox_unselected"
                             android:gravity="right"
-                            android:text="@string/yes" />
+                            android:orientation="horizontal" >
 
-                        <TextView
-                            android:id="@+id/customDeliveryNo"
-                            style="@style/HnutiDuha.ItemButtonMedium"
-                            android:layout_width="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_marginRight="10dp"
-                            android:background="@drawable/btn_checkbox_selected"
-                            android:gravity="right"
-                            android:text="@string/no" />
+                            <TextView
+                                android:id="@+id/customDeliveryYes"
+                                style="@style/HnutiDuha.ItemButtonMedium"
+                                android:layout_width="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/btn_checkbox_unselected"
+                                android:gravity="right"
+                                android:text="@string/yes" />
+
+                            <TextView
+                                android:id="@+id/customDeliveryNo"
+                                style="@style/HnutiDuha.ItemButtonMedium"
+                                android:layout_width="wrap_content"
+                                android:layout_gravity="right"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/btn_checkbox_selected"
+                                android:gravity="right"
+                                android:text="@string/no" />
+                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
