--- a/BioadresarAndroid/res/layout/edit_farm.xml
+++ b/BioadresarAndroid/res/layout/edit_farm.xml
@@ -15,4 +15,14 @@
         android:orientation="vertical" >
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/marker_progress"
+        style="@android:style/Widget.ProgressBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:indeterminate="true"
+        android:visibility="gone" />
+
 </RelativeLayout>
