--- a/BioadresarAndroid/res/values-v14/themes.xml
+++ b/BioadresarAndroid/res/values-v14/themes.xml
@@ -4,6 +4,7 @@
     <style name="Theme.HnutiDuhaTheme" parent="Theme.Sherlock">
         <item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>
         <item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>
+        <item name="android:textCursorDrawable">@null</item>
     </style>
 
     <style name="Widget.Styled.ActionBar" parent="Widget.Sherlock.ActionBar">
