--- a/BioadresarAndroid/res/layout/edit_contact.xml
+++ b/BioadresarAndroid/res/layout/edit_contact.xml
@@ -130,13 +130,7 @@
             android:gravity="bottom"
             android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/spacer"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/list_spacer" />
+            <ImageView style="@style/HnutiDuha.ListSpacer" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
