--- a/BioadresarAndroid/res/layout/edit_details.xml
+++ b/BioadresarAndroid/res/layout/edit_details.xml
@@ -29,18 +29,14 @@
                     style="@style/HnutiDuha.InputMedium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
                     android:gravity="top|left"
                     android:hint="@string/description"
                     android:inputType="textMultiLine"
                     android:maxLines="4"
                     android:minLines="4" />
 
-                <ImageView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/list_spacer" />
+                <ImageView style="@style/HnutiDuha.ListSpacer" />
 
                 <LinearLayout
                     android:id="@+id/addProductLayout"
@@ -51,22 +47,16 @@
                     <Button
                         android:id="@+id/production"
                         style="@style/HnutiDuha.SpinnerMedium"
-                        android:layout_width="140dp"
-                        android:text="@string/product" />
+                        android:text="@string/production" />
 
                     <cz.hnutiduha.bioadresar.layout.FlowLayout
                         android:id="@+id/productListLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        bioadresar:maxRowHeight="32dp" />
+                        bioadresar:maxRowHeight="@dimen/btn_in_row_height" />
 
-                    <ImageView
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/list_spacer" />
+                    <ImageView style="@style/HnutiDuha.ListSpacer" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -78,23 +68,17 @@
                     <Button
                         android:id="@+id/activities"
                         style="@style/HnutiDuha.SpinnerMedium"
-                        android:layout_width="140dp"
-                        android:text="@string/activity" />
+                        android:text="@string/activities" />
 
                     <cz.hnutiduha.bioadresar.layout.FlowLayout
                         android:id="@+id/activityListLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        bioadresar:maxRowHeight="40dp" >
+                        bioadresar:maxRowHeight="@dimen/btn_in_row_height" >
                     </cz.hnutiduha.bioadresar.layout.FlowLayout>
 
-                    <ImageView
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/list_spacer" />
+                    <ImageView style="@style/HnutiDuha.ListSpacer" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -111,9 +95,10 @@
 
                         <TextView
                             android:id="@+id/textView2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/left_row_width"
+                            android:layout_height="@dimen/btn_in_row_height"
                             android:layout_gravity="top|left"
+                            android:gravity="left|center_vertical"
                             android:text="@string/customDistribution"
                             android:textAppearance="@style/HnutiDuha.HeaderMediumWhite" />
 
@@ -121,38 +106,35 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
+                            android:layout_marginLeft="5dp"
                             android:gravity="right"
                             android:orientation="horizontal" >
 
                             <TextView
                                 android:id="@+id/customDeliveryYes"
                                 style="@style/HnutiDuha.ItemButtonMedium"
-                                android:layout_width="wrap_content"
-                                android:layout_gravity="right"
-                                android:layout_marginRight="10dp"
+                                android:layout_width="fill_parent"
+                                android:layout_gravity="left"
+                                android:layout_marginRight="20dp"
+                                android:layout_weight="0.5"
                                 android:background="@drawable/btn_checkbox_unselected"
-                                android:gravity="right"
                                 android:text="@string/yes" />
 
                             <TextView
                                 android:id="@+id/customDeliveryNo"
                                 style="@style/HnutiDuha.ItemButtonMedium"
-                                android:layout_width="wrap_content"
+                                android:layout_width="fill_parent"
                                 android:layout_gravity="right"
-                                android:layout_marginRight="10dp"
+                                android:layout_marginRight="20dp"
+                                android:layout_weight="0.5"
                                 android:background="@drawable/btn_checkbox_selected"
-                                android:gravity="right"
                                 android:text="@string/no" />
                         </LinearLayout>
                     </LinearLayout>
 
                     <ImageView
-                        android:id="@+id/spacer"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="0dp"
-                        android:src="@drawable/list_spacer" />
+                        style="@style/HnutiDuha.ListSpacer"
+                        android:layout_marginTop="0dp" />
 
                     <LinearLayout
                         android:id="@+id/containerPickupPlaces"
@@ -162,15 +144,17 @@
 
                         <TextView
                             android:id="@+id/textView3"
-                            android:layout_width="120dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/left_row_width"
+                            android:layout_height="@dimen/btn_in_row_height"
                             android:layout_gravity="top|left"
+                            android:gravity="left|center_vertical"
                             android:text="@string/containerDistributionPlaces"
                             android:textAppearance="@style/HnutiDuha.HeaderMediumWhite" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
                             android:orientation="vertical" >
 
                             <LinearLayout
@@ -187,7 +171,7 @@
                                 android:layout_width="@dimen/btn_in_row_height"
                                 android:layout_height="@dimen/btn_in_row_height"
                                 android:layout_gravity="right"
-                                android:layout_marginRight="10dp"
+                                android:layout_marginRight="20dp"
                                 android:layout_marginTop="10dp"
                                 android:scaleType="fitXY"
                                 android:src="@drawable/btn_plus" />
@@ -205,13 +189,7 @@
             android:gravity="bottom"
             android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/spacer"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/list_spacer" />
+            <ImageView style="@style/HnutiDuha.ListSpacer" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
