--- a/BioadresarAndroid/res/layout/edit_overview.xml
+++ b/BioadresarAndroid/res/layout/edit_overview.xml
@@ -27,17 +27,13 @@
             android:id="@+id/navigationButtons"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="0.1"
             android:gravity="bottom"
             android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/spacer"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/list_spacer" />
+            <ImageView style="@style/HnutiDuha.ListSpacer" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
