--- a/BioadresarAndroid/res/values/themes.xml
+++ b/BioadresarAndroid/res/values/themes.xml
@@ -3,6 +3,7 @@
 
     <dimen name="row_height">35dp</dimen>
     <dimen name="btn_in_row_height">35dp</dimen>
+    <dimen name="left_row_width">110dp</dimen>
 
     <style name="Theme.HnutiDuhaTheme" parent="Theme.Sherlock">
         <item name="actionBarStyle">@style/Widget.HnutiDuha.ActionBar</item>
@@ -69,17 +70,30 @@
         <item name="android:textAppearance">@style/HnutiDuha.TextMedium</item>
     </style>
 
-    <style name="HnutiDuha.SpinnerMedium" parent="@style/HnutiDuha.InputMedium">
-        <item name="background">@drawable/btn_dropdown</item>
-        <item name="android:height">30dp</item>
-        <item name="android:layout_height">30dp</item>
-        <item name="android:background">@drawable/btn_dropdown</item>
-        <item name="android:textColor">@color/DuhaTextGray</item>
-    </style>
-
-    <style name="HnutiDuha.ItemButtonMedium" parent="@style/HnutiDuha.SpinnerMedium">
+    <style name="HnutiDuha.ItemButtonMedium" parent="@style/HnutiDuha.InputMedium">
         <item name="background">@drawable/btn_item</item>
         <item name="android:background">@drawable/btn_item</item>
+        <item name="android:textColor">@color/DuhaTextGray</item>
+        <item name="android:height">@dimen/btn_in_row_height</item>
+        <item name="android:layout_height">@dimen/btn_in_row_height</item>
+        <item name="android:gravity">left|center_vertical</item>
+    </style>
+
+    <style name="HnutiDuha.SpinnerMedium" parent="@style/HnutiDuha.ItemButtonMedium">
+        <item name="background">@drawable/btn_dropdown</item>
+        <item name="android:width">140dp</item>
+        <item name="android:layout_width">140dp</item>
+        <item name="android:background">@drawable/btn_dropdown</item>
+    </style>
+
+    <style name="HnutiDuha.ListSpacer" parent="@Theme.HnutiDuhaTheme">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginRight">0dp</item>
+        <item name="android:src">@color/DuhaListSpacerDarkGray</item>
     </style>
 
     <declare-styleable name="FlowLayout">
